--- a/styles.css
+++ b/styles.css
@@ -177,6 +177,7 @@ section {
     padding-bottom: 7px;
     margin: 0px;
     font-size: 12px;
+    flex-wrap: wrap;
 }
 
 .footer-msg {
@@ -265,10 +266,6 @@ a {
     width: 100%;
     align-items: center;
 
-}
-
-.header-nav{ 
-    justify-content: right;
 }
 
 @media only screen and (max-width: 800px) {
