--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,12 @@ li {
     font-size: x-large;
 }
 
+.reflection-para{
+    padding-top: 10px;
+    padding-left: 14px;
+    font-size: large;
+}
+
 .main-para-home {
     padding-top: 10px;
     padding-left: 14px;
