--- a/styles.css
+++ b/styles.css
@@ -278,6 +278,10 @@ a {
 
 }
 
+canvas { 
+    justify-content: center;
+}
+
 @media only screen and (max-width: 800px) {
     .welcome {
         flex-direction: column;
