--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,14 @@ li {
     display: flex;
     justify-content: flex-start;
     height: 100%;
-    color: white;
+    color: black;
 }
 
 .welcome-code {
     display: flex;
     justify-content: flex-start;
     height: 100%;
-    color: white;
+    color: black;
     flex-direction: column;
 }
 
