--- a/styles.css
+++ b/styles.css
@@ -84,14 +84,14 @@ li {
     display: flex;
     justify-content: flex-start;
     height: 100%;
-    color: black;
+    color: white;
 }
 
 .welcome-code {
     display: flex;
     justify-content: flex-start;
     height: 100%;
-    color: black;
+    color: white;
     flex-direction: column;
 }
 
@@ -121,6 +121,7 @@ li {
 .typo-para {
     padding-left: 20px;
     font-size: xx-large;
+    color: white;
     flex-wrap: wrap;
 }
 
