--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ ul {
 
 header {
     display: flex;
-    background-color: darkred;
+    background-color: #A30039;
     padding: 0px 0px 0px 0px;
     align-items: center;
 }
@@ -134,7 +134,7 @@ li {
 }
 
 main {
-    background-color: #1E2952;
+    background-color: #1086A3;
 
     font-family: greycliff-cf, sans-serif;
     font-weight: 800;
@@ -203,7 +203,7 @@ section {
 footer {
     padding: 0px;
     margin-bottom: 0px;
-    background-color: darkred;
+    background-color: #A30039;
 }
 
 a {
